<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/edit_title"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <CheckBox
        android:id="@+id/checkBox_idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/idea_text"
        app:layout_constraintStart_toStartOf="@+id/edit_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />

    <CheckBox
        android:id="@+id/checkBox_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/todo_text"
        app:layout_constraintStart_toStartOf="@+id/checkBox_idea"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_idea" />

    <CheckBox
        android:id="@+id/checkBox_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/important_text"
        app:layout_constraintStart_toStartOf="@+id/checkBox_todo"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_todo" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="179dp"
        android:layout_marginBottom="181dp"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/checkBox_important"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_todo" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="180dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_todo" />

</androidx.constraintlayout.widget.ConstraintLayout>